<resources>
    <string name="app_name">FüD5</string>
    <string name="hello_world">Hello world!</string>
    <string name="main_title">Food Preferences</string>
    <string name="action_settings">Settings</string>
    <string name="action_menu">Menu</string>
    <string name="sample_button">Sample Button</string>
    <string name="button_pressed">Method btnSampleButton() was called.</string>
    <string name="title_activity_maps">Map</string>
    <string name="main_activity_search_term_title">Type of Food (Optional)</string>
    <string name="main_activity_location_title">Choose Different Location</string>
    <string name="main_activity_max_radius_title">Max Radius</string>
    <string name="main_activity_max_rating_title">Minimum Rating</string>
    <string name="tooltip_location_field_is_blank">Enter a location (at least a city). Or,
        press the crosshair to get your approximate address (location services must be on).</string>
    <string name="activity_main_green_followup_clicked_green">"Thanks for the feedback! We're glad you enjoyed "</string>
    <string name="activity_main_green_followup_clicked_yellow">"Thanks for the feedback about "</string>
    <string name="activity_main_green_followup_clicked_red">"Thanks for the feedback! We won't show you "</string>
    <string name="green">Let\'s Go!</string>
    <string name="yellow">Maybe Later&#8230;</string>
    <string name="red">Always Ignore</string>
    <string name="title_activity_food_preferences">Set your default settings.</string>
    <string name="title_activity_main">What would you like to eat?</string>
    <string name="default_location_search_text">Default Location</string>
    <string name="default_location_followup">(for when automatic detection doesn\'t work)</string>
    <string name="default_search_term_text">Default Type of Food</string>
    <string name="default_search_radius_text">Default Search Radius</string>
    <string name="default_min_star_text">Default Minimum Rating</string>
    <string name="hint_default_search_term">e.g. Tacos</string>
    <string name="hint_default_location_search">e.g. 1 Market St, San Francisco</string>
    <string name="popup_loading_text">Looking for info…</string>
    <string name="activity_result_page_title_preload_text"> </string>
    <string name="activity_result_page_toast_was_added_to_red_list">" was added to your ignored restaurants list."</string>
    <string name="mapLink">Open Google Maps</string>
    <string name="uberLink">Open Über</string>
    <string name="title_activity_user_preferences">Settings</string>
    <string name="settings_ui_text_general">Settings</string>
    <string name="settings_ui_text_misc">Miscellaneous Info</string>
    <string name="settings_ui_text_dev_playground">Dev Playground</string>
    <string name="settings_ui_text_red_list">Red List</string>
    <string name="settings_ui_button_food_settings">Default Settings</string>
    <string name="settings_ui_button_app_settings">App Settings (deprecated)</string>
    <string name="settings_ui_button_eula">End User License Agreement</string>
    <string name="settings_ui_button_app_info">About this app</string>
    <string name="settings_ui_button_db_test">Database Test</string>
    <string name="settings_ui_button_yelp_test">Yelp Test (deprecated)</string>
    <string name="settings_ui_button_locu_test">Locu Test</string>
    <string name="settings_ui_button_google_map_test">Google Map Test</string>
    <string name="settings_ui_button_selector_test">Restaurant Selector Test (deprecated) </string>
    <string name="settings_ui_button_modify_red_list">View/Remove Ignored Restaurants</string>
    <string name="title_activity_application_settings">App Settings</string>
    <string name="activity_application_settings_user_settings_checkbox">User Settings</string>
    <string name="settings_ui_button_reset_red_list">Ignored Restaurant History</string>
    <string name="activity_application_settings_restaurant_history_checkbox">All Restaurant
        History</string>
    <string name="activity_application_settings_user_settings_caption">Checking this box and
        pressing \"Clear\" will set your preferred restaurant search options to application
        defaults. You may need to agree to the End-User License Agreement again on application
        restart.</string>
    <string name="activity_application_settings_ignored_restaurant_history_caption">When you view
        a result and press \"Always Ignore\", FüD5 won\'t show you this restaurant again. By
        checking this box and pressing \"Clear\" your entire history of ignored restaurants will
        be erased. If you\'d prefer to see your ignored restaurants and selectively clear them,
        press the button \"View / Remove Ignored Restaurants\".</string>
    <string name="activity_application_settings_restaurant_history_caption">FüD5
        remembers restaurants when you choose \"Let\'s go!\", \"Maybe later\", or \"Always Ignore\".
        By checking this box and pressing \"Clear\" all of this data will be erased.</string>
    <string name="activity_application_settings_reset_checked_items_button">Clear checked
        items</string>
    <string name="activity_application_settings_user_settings_text">User Settings</string>
    <string name="activity_application_settings_ignored_restaurant_history_text">Ignored Restaurant History</string>
    <string name="activity_application_settings_all_restaurant_history_text">All Restaurant
        History</string>
    <string name="activity_application_settings_are_you_sure_text">Are you sure you want to reset</string>
    <string name="activity_application_settings_positive_button_text">I\'m sure</string>
    <string name="activity_application_settings_negative_button_text">Don\'t reset</string>
    <string name="activity_application_settings_title">Application Settings</string>
    <string name="activity_application_settings_reset_application_text">Clear History</string>
    <string name="activity_application_settings_manage_services_text">Manage Services</string>
    <string name="activity_application_settings_location_services_button_text">Turn location services on/off</string>
    <string name="settings_ui_button_push_notifications">Push notifications</string>
    <string name="activity_user_preferences_cleared_user_settings">Cleared User Settings</string>
    <string name="activity_user_preferences_cleared_restaurant_history">Cleared Restaurant History</string>
    <string name="activity_user_preferences_nothing_was_reset">No items were checked</string>
    <string name="activity_user_preferences_toast_removed_all_ignored_restaurants">Removed all ignored restaurants.</string>
    <string name="activity_user_preferences_cleared_ignored_restaurants">Cleared ignored restaurant history</string>
    <string name="activity_settings_ignored_restaurants_title">Ignored Restaurants</string>
    <string name="dialog_ask_to_use_location_title">Use Google\'s location service?</string>
    <string name="dialog_ask_to_use_location_body">
        Fud5 uses this feature to give you localized restaurant recommendations. This will help all
        apps on your phone determine the device\'s location. Anonymous location data may be sent
        to Google even when no apps are running. You can activate this feature later.\n\nIf
        you press \"Yes\", you will be taken to Android Location Settings.
    </string>
    <string name="dialog_ask_to_use_location_agree_button">Yes plz</string>
    <string name="dialog_ask_to_use_location_disagree_button">Maybe later</string>
    <string name="dialog_eula_title">End User License Agreement</string>
    <string name="dialog_eula_button_agree">I agree</string>
    <string name="dialog_eula_button_ok">Ok</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="select_db_color">Select database color</string>
    <string name="title_activity_green_list">GreenListActivity</string>
    <string name="title_activity_yellow_list">YellowListActivity</string>
    <string name="title_activity_red_list">RedListActivity</string>
    <string name="dialog_menu_not_found_text">
        No menu is available for this restaurant :(
    </string>
    <string name="dialog_menu_not_found_ok_button">Ok</string>
    <string name="rmenus_restaurant_name"/>
    <string name="title_activity_locu_menu">LocuMenuActivity</string>
    <string name="locu_search_id">64e0307ca073dccb5666</string>
    <string name="fragment_more_info_open_seatme_link">Open SeatMe link</string>
    <string name="fragment_more_info_title_distance">Distance</string>
    <string name="fragment_more_info_title_categories">Categories</string>
    <string name="fragment_more_info_title_address">Address</string>
    <string name="fragment_more_info_title_phone_number">Phone number</string>
    <string name="fragment_more_info_reserve_a_table">Reserve a table</string>
    <string name="fragment_more_info_hours_title">Hours</string>
    <string name="fragment_more_info_website_title">Website</string>
    <string name="fragment_no_results_title">No results</string>
    <string name="fragment_no_results_body">We couldn\'t use the specified search parameters to find
        a great new restaurant for you to try today. Consider doing at least one of the
        following:</string>
    <string name="fragment_no_results_body_tip1">&#8226; Widen the max radius.</string>
    <string name="fragment_no_results_body_tip2">&#8226; Lower the minimum star rating.</string>
    <string name="fragment_no_results_body_tip3">&#8226; Eliminate some search terms.</string>
    <string
        name="fragment_no_results_body_tip4">&#8226; Search from a different address or just
        specify a city.</string>
    <string name="fragment_green_followup_green_button">I liked it</string>
    <string name="fragment_green_followup_yellow_button">It was okay</string>
    <string name="fragment_green_followup_red_buton">don\'t suggest again</string>
    <string name="fragment_green_followup_prompt">Your feedback helps us give better recommendations.</string>
    <string name="fragment_green_followup_title">What did you think about</string>
    <string name="title_locu_menu_test_activity">Locu Menu Test</string>
    <string name="locu_menu_debug_text"> </string>
    <string name="display_menu_by_id_info_text">
        Note that not all venues have menus. A Locu ID is comprised of 20 alphanumeric characters.
    </string>
    <string name="title_restaurant_test_activity">RestaurantTest</string>
    <string name="api_call_result">(loading)</string>
    <string name="title_activity_shared_preferences_test">SharedPreferencesTestActivity</string>
    <string name="settings_ui_button_shared_preferences_test">Display shared preferences</string>
    <string name="dialog_food_preferences_title">Food Preferences</string>
    <string name="dialog_food_preferences_message">Modify default filters when you search for food</string>
    <string name="dialog_modify_red_list_title">Ignored Restaurants</string>
    <string name="dialog_modify_red_list_message">List of restaurants that won\'t appear in your
        feed
    </string>
    <string name="generic_save_text">Save</string>
    <string name="generic_cancel_text">Cancel</string>
    <string name="generic_info_title">Info</string>
    <string name="generic_cancel_text_message">New settings won\'t be saved.</string>
    <string name="generic_are_you_sure_title">Are you sure?</string>
    <string name="generic_back_text">Back</string>
    <string name="accessibility_info_button">info</string>
    <string name="activity_application_settings_push_notifications_text">Push Notifications</string>
    <string name="activity_application_settings_nearby_restaurants_checkbox">Nearby restaurants</string>
    <string name="activity_application_settings_app_updates_checkbox">App updates</string>
</resources>