<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.csc413.team5.fud5.UserPreferencesActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:id="@+id/main_scroll_view">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/activity_application_settings_push_notifications_text"
                android:id="@+id/txtViewPushNotificationsTitle" />

            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_application_settings_nearby_restaurants_checkbox"
                android:id="@+id/checkBoxNearbyRestaurants"
                android:checked="false"
                android:layout_marginTop="10dp"
                android:layout_alignParentEnd="true"
                />

            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_application_settings_app_updates_checkbox"
                android:id="@+id/checkBoxAppUpdates"
                android:checked="false"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/activity_application_settings_manage_services_text"
                android:id="@+id/textView5"
                android:layout_marginTop="15dp"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_application_settings_location_services_button_text"
                android:id="@+id/buttonManageLocationServices"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/activity_application_settings_reset_application_text"
                android:id="@+id/txtViewAppSettingsTitle"
                android:layout_marginTop="15dp"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_application_settings_user_settings_checkbox"
                android:id="@+id/checkBoxAppSettingsUser"
                android:checked="false"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_application_settings_user_settings_caption"
                android:id="@+id/textViewAppSettingsUser"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_application_settings_restaurant_history_checkbox"
                android:id="@+id/checkBoxAppSettingsRestaurant"
                android:checked="false"
                android:layout_marginTop="10dp"
                android:clickable="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_application_settings_restaurant_history_caption"
                android:id="@+id/textViewAppSettingsRestaurant"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_application_settings_reset_checked_items_button"
                android:id="@+id/buttonAppSettingsReset"
                android:layout_marginTop="15dp" />

            <!-- Temporary SharedPrefs settings marker -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Location Preferences:"
                android:id="@+id/text_location_preferences"
                android:gravity="left"
                android:layout_marginTop="15dp"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Default min star:"
                android:id="@+id/text_default_min_star"
                android:gravity="left" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Default search radius:"
                android:id="@+id/text_default_search_radius"
                android:gravity="left" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Preferred niches:"
                android:id="@+id/text_preferred_niches"
                android:gravity="left" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="App Language:"
                android:id="@+id/text_app_language"
                android:gravity="left" />

            <!-- end Temporary SharedPrefs settings marker -->


        </LinearLayout>
    </ScrollView>

</LinearLayout>
