<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.csc413.team5.fud5.SettingsActivity">

    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:id="@+id/main_scroll_view">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayoutSettings">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_ui_button_app_info"
                android:id="@+id/app_info_button"
                android:onClick="showAppInfo"
                android:background="@color/purple"
                android:textColor="@color/gold"
                android:layout_marginBottom="10dp"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_ui_button_eula"
                android:id="@+id/eula_button"
                android:onClick="showEULA"
                android:background="@color/purple"
                android:textColor="@color/gold"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/activity_settings_ignored_restaurants_title"
                android:id="@+id/textView"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"
                android:layout_marginTop="10dp"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/purple"
                android:textColor="@color/gold"
                android:text="@string/settings_ui_button_modify_red_list"
                android:id="@+id/modify_red_list"
                android:onClick="modifyRedList"
                android:layout_marginBottom="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/activity_application_settings_reset_application_text"
                android:id="@+id/txtViewAppSettingsTitle"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:padding="0dp">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_application_settings_user_settings_checkbox"
                    android:id="@+id/checkBoxAppSettingsUser"
                    android:checked="false"
                    android:paddingRight="10dp"
                    android:textSize="16sp"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/imageButtonResetUserSettingsInfo"
                    android:src="@android:drawable/ic_dialog_info"
                    android:padding="0dp"
                    android:paddingLeft="10dp"
                    android:tint="@color/purple"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/checkBoxAppSettingsUser"
                    android:layout_marginStart="5dp"
                    android:layout_alignBottom="@+id/checkBoxAppSettingsUser"
                    android:contentDescription="@string/accessibility_info_button"/>
            </RelativeLayout>

            <com.nhaarman.supertooltips.ToolTipRelativeLayout
                android:id="@+id/tooltipAppSettingsUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/purple"
                android:layout_marginTop="-15dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="32dp">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_ui_button_reset_red_list"
                    android:id="@+id/reset_red_list"
                    android:onClick="resetRedList"
                    android:textSize="16sp"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/imageButtonResetIgnoredRestaurantHistoryInfo"
                    android:src="@android:drawable/ic_dialog_info"
                    android:padding="0dp"
                    android:paddingLeft="10dp"
                    android:tint="@color/purple"
                    android:contentDescription="@string/accessibility_info_button"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="false"
                    android:layout_toEndOf="@id/reset_red_list"
                    android:layout_marginStart="15dp"/>
            </RelativeLayout>

            <com.nhaarman.supertooltips.ToolTipRelativeLayout
                android:id="@+id/tooltipAppSettingsIgnoredRestaurants"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/purple"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="32dp">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_application_settings_restaurant_history_checkbox"
                    android:id="@+id/checkBoxAppSettingsRestaurant"
                    android:checked="false"
                    android:clickable="true"
                    android:textSize="16sp"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/imageButtonResetRestaurantHistoryInfo"
                    android:src="@android:drawable/ic_dialog_info"
                    android:padding="0dp"
                    android:paddingLeft="10dp"
                    android:tint="@color/purple"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/checkBoxAppSettingsRestaurant"
                    android:layout_marginStart="15dp"
                    android:layout_alignParentBottom="true"
                    android:contentDescription="@string/accessibility_info_button"/>
            </RelativeLayout>

            <com.nhaarman.supertooltips.ToolTipRelativeLayout
                android:id="@+id/tooltipAppSettingsRestaurant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/purple"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_application_settings_reset_checked_items_button"
                android:id="@+id/buttonAppSettingsReset"
                android:layout_marginTop="5dp"
                android:background="@color/purple"
                android:textColor="@color/gold"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/activity_application_settings_manage_services_text"
                android:id="@+id/textView5"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"
                android:layout_marginTop="10dp"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_application_settings_location_services_button_text"
                android:id="@+id/buttonManageLocationServices"
                android:background="@color/purple"
                android:textColor="@color/gold"
                android:layout_marginBottom="10dp"/>

            <!-- Dev Playground -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/settings_ui_text_dev_playground"
                android:id="@+id/dev_playground"
                android:layout_marginTop="25dp"
                android:textColor="#777"
                android:textSize="20dp"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Restaurant Selector Demo"
                android:id="@+id/settings_selector_demo_button"
                android:onClick="showSelectorDemo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="&quot;Let&apos;s Go&quot; Followup Interval"
                android:id="@+id/textView9"
                android:textSize="16dp"
                android:layout_marginTop="10dp"
                android:textColor="#777" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/seekBarSettingsFollowupInterval"
                    android:layout_gravity="center_horizontal"
                    android:max="24"
                    android:progress="12"
                    android:indeterminate="false"
                    android:layout_toStartOf="@+id/textViewSettingsFollowupIntervalText" />

                <TextView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:text="12 hours"
                    android:id="@+id/textViewSettingsFollowupIntervalText"
                    android:textSize="16dp"
                    android:layout_gravity="right"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"/>

            </RelativeLayout>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_ui_button_food_settings"
                android:id="@+id/food_preferences"
                android:onClick="showFoodSettings" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_ui_button_db_test"
                android:id="@+id/test_db"
                android:onClick="showDbTest"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Image Test"
                android:id="@+id/test_image"
                android:onClick="showImageTest"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_ui_button_locu_test"
                android:id="@+id/test_locu"
                android:onClick="showLocuTest"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_ui_button_google_map_test"
                android:id="@+id/test_map"
                android:onClick="showMapTest"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_ui_button_shared_preferences_test"
                android:id="@+id/test_shared_preferences"
                android:onClick="showSharedPreferencesTest"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
